<resources>
    <string name="app_name">Dublin Florist Association</string>

    <!-- Login Section -->
    <string name="login">Login</string>
    <string name="register">Register Here</string>

    <!-- HomePage -->
    <string name="catalogue">Catalogue</string>
    <string name="FloristsAZ">Florists A-Z</string>
    <string name="floristsByLocation">Florists A-Z </string>
    <string name="flowerArchive">Flower Archive</string>

    <string name="home">Return to Home</string>
    <!-- Catalogue Section-->


    <!-- Florists A-Z Section-->
    <string name="southCountyDublin">South County Dublin</string>
    <string name="northCountyDublin">North County Dublin</string>
    <string name="dublinCity">Dublin City</string>
    <string name="title_activity_home_main">home_main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
