<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_floristsaz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.leondesigns.flowerapp.floristsaz"
    android:orientation="vertical">

    <Button
        android:id="@+id/returnToHomeFloristsAZ"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text = "Return to home"
        android:textColor = "#FFFFFF"
        android:background= "@color/colorAccent"
        android:layout_marginBottom="15dp"
        android:onClick="viewHome"
        />

    <Button
        android:id="@+id/FloristsDublinSouth"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:text = "@string/southCountyDublin"
        android:layout_marginBottom="15dp"
        style="@style/roseButton"
        />

    <Button
        android:id="@+id/FloristsDublinNorth"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:text = "@string/northCountyDublin"
        android:layout_marginBottom="15dp"
        style="@style/roseButton"
        />



    <Button
        android:id="@+id/FloristsDublinCity"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:text = "@string/dublinCity"
        style="@style/roseButton"
        />

</LinearLayout>
